2011-09-01  Andrei Spataru  <andrei.cristian.spataru@cern.ch>
	* added START script and State.pm
	* modification to initialize script to kill running xdaq
 	applications on destroy

2011-04-12  Emilio Meschi  <emilio.meschi@cern.ch>
	* tag V01-00-03
	* small improvements to initialize script
	
2011-03-21  Emilio Meschi  <emilio.meschi@cern.ch>
	* tag V01-00-02
	* small fixes and emulateLS better handling

2011-01-21  Emilio Meschi  <emilio.meschi@cern.ch>
	* tag V01-00-01
	* added option to turn off iDie

2011-01-19  Emilio Meschi  <emilio.meschi@cern.ch>
	* tag V01-00-00
	* merge all back from branch
	* initialize further improved
	
2010-11-17  Emilio Meschi  <emilio.meschi@cern.ch>
	* tag V00-06-27-04
	* general overhaul of "initialize" script 

2010-01-22  Emilio Meschi  <emilio.meschi@cern.ch>
	* tag V00-06-27-01
	* fix segfault in event id override only spotted on sl5 !?!

2009-07-30  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-07-00
	* added AutoTrigger features
	* Nota Bene: this tag may break compatibility with some playback features

2009-04-28  Emilio Meschi  <emilio.meschi@cern.ch>
	* tag V00-06-27-00
	* removed warning from cast for 64bit compilation
	
2009-04-28  Emilio Meschi  <emilio.meschi@cern.ch>
	* tag V00-06-27
	* modifications for CLHEP 

2009-04-28  Emilio Meschi  <emilio.meschi@cern.ch>
	* tag V00-06-26
	* moved again range cheking to enabling to make sure playback is detected

2009-04-09  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-06-25
	* moved range checking of FEDids to configure to detect playback mode

2009-01-09  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-06-23
	* added -tcp option to initialize script to support use of old pttcp

2009-01-09  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-06-22
	* support SM python config
	* added -debug option to initialize to include stepper in cfg

2008-11-27  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-06-21